---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: ????
  Changes:
    - Milestones settings can now only be changed by admins, instead of relying on "Mod Settings Changed" permissions. Seems more consistent with Factorio's own conditions on modifying Mod Settings.
    - Changing the settings in a multiplayer game will now indicate who did the change in the chat message.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2022-04-01

  Features:
    - Add preset for Nullius (Thanks to Anachrony's help).
    - Add preset addons for Cargo Ships, Spidertron Extended, Spidertron Tiers

  Changes:
    - Tweaks to various presets, most notably for Sea Block.

  Locale:
    - New translations from Crowdin. If you would like to translate this mod please find FactorioMilestones here: https://crowdin.com/project/factorio-mods-localization
      - French translation by yours truly.
      - Korean translation thanks to x2605.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2022-02-20

  Bugfixes:
    - Fix infinite milestone not creating next step when backfilling a milestone with an estimation range.
    - Fix infinite milestones affecting the loaded set when it shouldn't.

  Changes:
    - Change all character kills in presets to increase by x5 instead of x2.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-02-20

  Features:
    - Infinite Milestones: 
      You can now set a "next" value for a milestone. When that milestone is completed, a new milestone is automatically created at a higher count, depending on that "next" value. 