@@ -26,7 +26,7 @@ end
 function build_import_export_page(player_index, button_element, import)
     local titlebar_caption = import and {"milestones.settings_import_title"} or {"milestones.settings_export_title"}
 
-    local outer_frame = global.players[player_index].outer_frame
+    local outer_frame = get_outer_frame(player_index)
     local import_export_frame = outer_frame.milestones_settings_import_export
     import_export_frame.milestones_settings_import_export_titlebar.milestones_settings_import_export_titlebar_label.caption = titlebar_caption
 
@@ -76,20 +76,20 @@ function toggle_export_encoded(checkbox_element)
 end
 
 function close_import_export_page(player_index)
-    local outer_frame = global.players[player_index].outer_frame
+    local outer_frame = get_outer_frame(player_index)
     local import_export_frame = outer_frame.milestones_settings_import_export
     local inside_frame = import_export_frame.milestones_settings_import_export_inside
 
     inside_frame.clear()
     import_export_frame.visible = false
 
-    local button_flow = global.players[player_index].inner_frame.milestones_preset_flow
+    local button_flow = get_inner_frame(player_index).milestones_preset_flow
     button_flow.milestones_import_button.style = "tool_button"
     button_flow.milestones_export_button.style = "tool_button"
 end
 
 function import_settings(player_index)
-    local import_string = global.players[player_index].outer_frame
+    local import_string = get_outer_frame(player_index)
                               .milestones_settings_import_export
                               .milestones_settings_import_export_inside
                               .milestones_import_export_scroll
@@ -105,7 +105,7 @@ function import_settings(player_index)
         local settings_flow = global.players[player_index].settings_flow
         settings_flow.clear()
         fill_settings_flow(settings_flow, imported_milestones)
-        local preset_dropdown = global.players[player_index].inner_frame.milestones_preset_flow.milestones_preset_dropdown
+        local preset_dropdown = get_inner_frame(player_index).milestones_preset_flow.milestones_preset_dropdown
         preset_dropdown.caption = {"milestones.settings_imported"}
         preset_dropdown.tags = {action="milestones_change_preset", imported=true} -- For some reason, can't just change a single tag
         close_import_export_page(player_index)
